--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
                     <p>
                         May Optical is a generational family business and has been providing quality eyewear to the Greater Toronto Area since 1985. Originally located on Dundas and Spadina, we relocated to Silver Star Blvd and Steeles Ave. in 2005. We have a unique selection
                         of frames, sunglasses, contact lenses and are always on the look out for the latest products.
-
-
                     </p>
                     <p>With clientele spanning 4 generations, we pride ourselves in treating each customer as family and strive to meet each person's visual needs with our experience, knowledge and our everyday great prices.</p>
 
@@ -101,8 +99,7 @@
             <span id="dots"></span>
             <div id="more-div">
                 <span id="more">
-                Adidas, Gianfranco Ferre, Porsche
-            </span>
+                    Givenchy, Ray-Ban, Anacolé, Marciano, Guess, Emporio Armani, Carrera, O&X, Laura Biagiotti, Easyclip, Easytwist, Timberland, Eyelet Eyewear and more.</span>
             </div>
         </section>
 
