--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
 
                 <!-- <div id="services-col">
                     <img height="400px" src="imgs/g1-nobg.png" alt="sillhouette glasses"> 
-
-
     </div>-->
 
                 <div id="services-col">
@@ -214,7 +212,19 @@
             <!-- LightWidget WIDGET -->
             <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/cbf92bd7e4325ca9a57019a92a73bf55.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 
+
         </section>
+
+        <section id="reviews">
+
+            <h2>REVIEWS</h2>
+
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-0921614f-afcb-4a4a-88f9-80aea69ad574"></div>
+
+
+        </section>
+
         <section id="contact">
             <h2>CONTACT</h2>
             <div class="float-container">
@@ -248,7 +258,7 @@
                         <tbody>
                             <tr>
                                 <td>Monday</td>
-                                <td>11:00 - 5:00</td>
+                                <td>11:00 am - 5:00 pm</td>
                             </tr>
                             <tr>
                                 <td>Tuesday&nbsp;</td>
@@ -260,19 +270,19 @@
                             </tr>
                             <tr>
                                 <td>Thursday&nbsp;</td>
-                                <td>11:00 - 5:00</td>
+                                <td>11:00 am - 5:00 pm</td>
                             </tr>
                             <tr>
                                 <td>Friday&nbsp;</td>
-                                <td>11:00 - 5:00&nbsp;</td>
+                                <td>11:00 am - 5:00 pm</td>
                             </tr>
                             <tr>
                                 <td>Saturday</td>
-                                <td>11:00 - 4:00&nbsp;</td>
+                                <td>11:00 am - 4:00 pm</td>
                             </tr>
                             <tr>
                                 <td>Sunday&nbsp;</td>
-                                <td>12:00 - 4:00&nbsp;</td>
+                                <td>12:00 pm - 4:00 pm</td>
                             </tr>
                         </tbody>
                     </table>
@@ -283,7 +293,6 @@
 
 
             </div>
-
 
 
         </section>
