--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/mobile.css">
 
     <link rel="icon" type="image/png" href="imgs/logo.png" />
     <!--Google fonts-->
@@ -18,6 +19,7 @@
     <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -30,11 +32,12 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
                     <li><a href="#nav-about">About</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#insurance">Insurance</a></li>
+                    <li><a href="#follow">Gallery</a></li>
+                    <li><a href="#reviews">Reviews</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -149,17 +152,17 @@
         <!-- INSURANCE -->
         <section id="insurance">
             <h2>INSURANCE PARTNERS</h2>
+            <img id="ins-img" src="imgs/insurance.jpg" alt="insurance partenrs">
 
 
-            <img src="imgs/insurance.jpg" alt="insurance partenrs">
+            <div id="vid">
+                <section id="video-wrapper">
+                    <iframe width="700" height="400" src="https://www.youtube.com/embed/APFu-GMqEcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </section>
+            </div>
 
 
-
-            <iframe width="700" height="400" src="https://www.youtube.com/embed/APFu-GMqEcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        </section>
-
-        <!-- moved to contact HOURS
+            <!-- moved to contact HOURS
         <section id="hours">
             <div id="hours-div">
                 <h2 id="hrs">HOURS</h2>
@@ -218,9 +221,10 @@
         <section id="reviews">
 
             <h2>REVIEWS</h2>
-
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-            <div class="elfsight-app-0921614f-afcb-4a4a-88f9-80aea69ad574"></div>
+            <div id="divreview">
+                <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                <div class="elfsight-app-0921614f-afcb-4a4a-88f9-80aea69ad574"></div>
+            </div>
 
 
         </section>
@@ -258,7 +262,7 @@
                         <tbody>
                             <tr>
                                 <td>Monday</td>
-                                <td>11:00 am - 5:00 pm</td>
+                                <td>11:00 - 5:00 </td>
                             </tr>
                             <tr>
                                 <td>Tuesday&nbsp;</td>
@@ -270,19 +274,19 @@
                             </tr>
                             <tr>
                                 <td>Thursday&nbsp;</td>
-                                <td>11:00 am - 5:00 pm</td>
+                                <td>11:00 - 5:00</td>
                             </tr>
                             <tr>
                                 <td>Friday&nbsp;</td>
-                                <td>11:00 am - 5:00 pm</td>
+                                <td>11:00 - 5:00</td>
                             </tr>
                             <tr>
                                 <td>Saturday</td>
-                                <td>11:00 am - 4:00 pm</td>
+                                <td>11:00 - 4:00</td>
                             </tr>
                             <tr>
                                 <td>Sunday&nbsp;</td>
-                                <td>12:00 pm - 4:00 pm</td>
+                                <td>12:00 - 4:00</td>
                             </tr>
                         </tbody>
                     </table>
@@ -299,9 +303,6 @@
 
 
 
-        <footer class="footer ">
-            Copyright © 2021 May Optical. All rights reserved.
-        </footer>
 
     </div>
 
@@ -312,6 +313,13 @@
     <!-- JAVA SCRIPT -->
     <script src="js/script.js "></script>
 
+
+    <footer class="footer">
+        Copyright © 2021 May Optical. All rights reserved.
+    </footer>
+
+
 </body>
+
 
 </html>
