--- a/index.html
+++ b/index.html
@@ -221,10 +221,11 @@
         <section id="reviews">
 
             <h2>REVIEWS</h2>
-            <div id="divreview">
+            <!-- 
+                <div id="divreview">
                 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
                 <div class="elfsight-app-0921614f-afcb-4a4a-88f9-80aea69ad574"></div>
-            </div>
+            </div> -->
 
 
         </section>
@@ -233,9 +234,7 @@
             <h2>CONTACT</h2>
             <div class="float-container">
 
-                <div class="float-child">
-                    <div class="float-address"><b>Address:</b> <br>668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1</div>
-                </div>
+
 
                 <div class="float-child1">
                     <div class="blue"><b>Phone:</b> <br><a href="tel:+1 416-291-8989"> (416) 291-8989</a><br></div>
@@ -255,8 +254,11 @@
                     </div>
                 </div>
 
+                <div class="float-child">
+                    <div class="float-address"><b>Address:</b> <br>668 Silver Star Blvd. Unit 206,<br> Scarborough, ON, M1V 5N1</div>
+                </div>
 
-                <div class="float-child2">
+                <div class="float-child">
                     <b>Hours:</b>
                     <table>
                         <tbody>
@@ -308,7 +310,7 @@
 
     <!--FONTAWESOME ICONS-->
     <script src="https://kit.fontawesome.com/42de2dc56d.js " crossorigin="anonymous "></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css " rel="stylesheet ">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css " rel="stylesheet ">
 
     <!-- JAVA SCRIPT -->
     <script src="js/script.js "></script>
