--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
         <section id="reviews">
 
             <h2>REVIEWS</h2>
-            <!-- 
-                <div id="divreview">
+
+            <div id="divreview">
                 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
                 <div class="elfsight-app-0921614f-afcb-4a4a-88f9-80aea69ad574"></div>
-            </div> -->
+            </div>
 
 
         </section>
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="float-child1">
-                    <div class="green"><b>Email:</b> <br><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a>
+                    <div class="email"><b>Email:</b> <br><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a>
                     </div>
                 </div>
 
@@ -264,7 +264,7 @@
                         <tbody>
                             <tr>
                                 <td>Monday</td>
-                                <td>11:00 - 5:00 </td>
+                                <td class="time">11:00 - 5:00 </td>
                             </tr>
                             <tr>
                                 <td>Tuesday&nbsp;</td>
@@ -276,19 +276,19 @@
                             </tr>
                             <tr>
                                 <td>Thursday&nbsp;</td>
-                                <td>11:00 - 5:00</td>
+                                <td class="time">11:00 - 5:00</td>
                             </tr>
                             <tr>
                                 <td>Friday&nbsp;</td>
-                                <td>11:00 - 5:00</td>
+                                <td class="time">11:00 - 5:00</td>
                             </tr>
                             <tr>
                                 <td>Saturday</td>
-                                <td>11:00 - 4:00</td>
+                                <td class="time">11:00 - 4:00</td>
                             </tr>
                             <tr>
                                 <td>Sunday&nbsp;</td>
-                                <td>12:00 - 4:00</td>
+                                <td class="time">12:00 - 4:00</td>
                             </tr>
                         </tbody>
                     </table>
