--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
 
             <div class="rev">
-                <a href="https://www.google.com/maps/place/May+Optical/@43.8228814,-79.3009995,15z/data=!4m7!3m6!1s0x0:0xa567a537795e4c53!8m2!3d43.8228814!4d-79.3009995!9m1!1b1">
+                <a href="https://www.google.com/maps/place/May+Optical/@43.8228814,-79.3009995,15z/data=!4m7!3m6!1s0x0:0xa567a537795e4c53!8m2!3d43.8228814!4d-79.3009995!9m1!1b1" target="_blank">
                     <button>See All Reviews</button>
                 </a>
             </div>
