--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
 
                 <div class="float-child1">
-                    <div class="email"><b>Email:</b> <br><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a>
+                    <div class="email"><b>Email:</b> <br><a href="mailto:hello@mayoptical.com">hello@mayoptical.com</a>
                     </div>
                 </div>
 
