--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <!-- FAVICON -->
+    <link rel="icon" href="imgs/icon.jfif">
     <!-- Primary Meta Tags -->
     <title>May Optical</title>
     <meta name="title" content="May Optical">
