--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <!-- Primary Meta Tags -->
     <title>May Optical</title>
     <meta name="title" content="May Optical">
-    <meta name="description" content="May Optical 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1 T (416) 291-8989 F (416) 591-1119">
+    <meta name="description" content="May Optical has been providing the GTA with quality and affordable eyewear since 1985.">
     <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 
 <body>
@@ -116,7 +115,6 @@
                 <!-- <div id="services-col">
                     <img height="400px" src="imgs/g1-nobg.png" alt="sillhouette glasses"> 
     </div>-->
-
                 <div id="services-col">
                     <h3> We provide:</h3>
                     <div id="service-list">
@@ -162,47 +160,6 @@
                     <iframe width="700" height="400" src="https://www.youtube.com/embed/APFu-GMqEcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </section>
             </div>
-
-
-            <!-- moved to contact HOURS
-        <section id="hours">
-            <div id="hours-div">
-                <h2 id="hrs">HOURS</h2>
-                <table>
-                    <tbody>
-                        <tr>
-                            <td>Monday</td>
-                            <td>11:00 - 5:00</td>
-                        </tr>
-                        <tr>
-                            <td>Tuesday&nbsp;</td>
-                            <td>Closed</td>
-                        </tr>
-                        <tr>
-                            <td>Wednesday&nbsp;</td>
-                            <td>Closed</td>
-                        </tr>
-                        <tr>
-                            <td>Thursday&nbsp;</td>
-                            <td>11:00 - 5:00</td>
-                        </tr>
-                        <tr>
-                            <td>Friday&nbsp;</td>
-                            <td>11:00 - 5:00&nbsp;</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday</td>
-                            <td>11:00 - 4:00&nbsp;</td>
-                        </tr>
-                        <tr>
-                            <td>Sunday&nbsp;</td>
-                            <td>12:00 - 4:00&nbsp;</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div style="margin-top: 20px;">Please note that we are closed on all statutory holidays.</div>
-
-            </div> -->
 
         </section>
         <section id="follow">
