update metadata keywords

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>May Optical</title>
     <meta name="title" content="May Optical">
     <meta name="description" content="May Optical has been providing the GTA with quality and affordable eyewear since 1985.">
-    <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
+    <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned, Optical, optometrist, frames, eyeglasses, sunglasses, rx, 5 star, small business, local, cheap, lenses">
     <meta name="author" content="Kalvin Kao">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
