--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
             <!-- ABOUT -->
             <section id="about">
                 <h2>ABOUT US</h2>
-                <div>
+                <div id="abtleft">
                     <img src="imgs/store.png" alt="May Optical Store">
+                </div>
+                <div id="abtright">
                     <p>
                         May Optical is a generational family business and has been providing quality eyewear to the Greater Toronto Area since 1985. Originally located on Dundas and Spadina, we relocated to Silver Star Blvd and Steeles Ave. in 2005. We have a unique selection
                         of frames, sunglasses, contact lenses and are always on the look out for the latest products.
                     </p>
                     <p>With clientele spanning 4 generations, we pride ourselves in treating each customer as family and strive to meet each person's visual needs with our experience, knowledge and our everyday great prices.</p>
-
                 </div>
             </section>
         </section>
