--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="hero-text">
                     <h1 class="slogan1">LOOKING OUT FOR YOUR EYES</h1>
                     <p class="slogan2">Shop high quality eyewear from around the world</p>
-                    <a href="https://shop.mayoptical.com"><button>View Shop</button></a>
+                    <a href="https://shop.mayoptical.com" target="_blank"><button>View Shop</button></a>
                 </div>
             </div>
             <section id="nav-about"></section>
